packages/namespace-envelope/bases/default/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: confighubplaceholder
  labels:
    app.kubernetes.io/managed-by: confighub-namespace-manager
